tests/parser/tests/cases/should_fail/non_hex_ascii_escape_code/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:8
1 |   k := '\xhh';
  |          ^ here
  = note: Encountered unexpected character `h` ASCII escape code must only contain hex digits
